--- a/docs/_layout/css/custom.css
+++ b/docs/_layout/css/custom.css
@@ -126,6 +126,15 @@ h2 {
   content: "\f1c9";
 }
 
+.table {
+  margin-bottom: 2rem;
+}
+
+.table tr:last-child td {
+  border-bottom: 1px solid #dee2e6;
+  margin-bottom: 1rem;
+}
+
 footer .nav-link {
   font-size: 0.8rem;
   font-weight: 700;
