save work after po review

--- a/docs/releases/2.0/style.css
+++ b/docs/releases/2.0/style.css
@@ -49,3 +49,8 @@ hr {
     list-style: none;
     display: block !important;
 }
+
+table.def.conf {
+    background: var(--note-bg);
+    border-left: 0.5em solid var(--note-border);
+}
